--- a/semi-final project/main/CMakeLists.txt
+++ b/semi-final project/main/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.19)
-project(main LANGUAGES CXX)
+project(GoidaZvon LANGUAGES CXX)
 
 find_package(Qt6 6.5 REQUIRED COMPONENTS Core Widgets)
 
@@ -7,17 +7,28 @@ qt_standard_project_setup()
 
 qt_add_resources(RESOURCE_FILES res.qrc)
 
-qt_add_executable(main
+qt_add_executable(GoidaZvon
     WIN32 MACOSX_BUNDLE
 
     ${RESOURCE_FILES}
 
     main.cpp
-    src/mainwindow.cpp
+
     header/mainwindow.h
+    header/login.h
+    header/loadingscreen.h
+
+    src/mainwindow.cpp
+    src/login.cpp
+    src/loadingscreen.cpp
 )
 
-target_link_libraries(main
+qt_add_ui(GoidaZvon SOURCES
+    forms/login.ui
+    forms/loadingscreen.ui
+)
+
+target_link_libraries(GoidaZvon
     PRIVATE
         Qt::Core
         Qt::Widgets
@@ -25,14 +36,14 @@ target_link_libraries(main
 
 include(GNUInstallDirs)
 
-install(TARGETS main
+install(TARGETS GoidaZvon
     BUNDLE  DESTINATION .
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
 )
 
 qt_generate_deploy_app_script(
-    TARGET main
+    TARGET GoidaZvon
     OUTPUT_SCRIPT deploy_script
     NO_UNSUPPORTED_PLATFORM_ERROR
 )
